# forbidden_fruit

./: .index.html.swp  README.md  index.html  pyproject.toml
forbidden_fruit/: index.html  main.py  routes.py
forbidden_fruit/static/: 404.css  global.css  lab.css  script.js  style.css
forbidden_fruit/templates/: 404.html  base.html  index.html  lab.html  labs.html
